address Chuck comments; add coauthors

--- a/local.bib
+++ b/local.bib
@@ -38,11 +38,11 @@
   handle =       {LTS-88},
 }
 
-@DocuShare{LTS-206,
-  author =       {D. Neill, J. Sebag, W. Gressler},
-  title =        "{Hexapods and Rotator Specifications Document}",
-  year =         2017,
-  handle =       {LTS-206},
+@DocuShare{LTS-146,
+  author =       {W. Gressler, D. Neill, J. Sebag},
+  title =        "{M2 Cell Assembly Specifications Document}",
+  year =         2015,
+  handle =       {LTS-146},
 }
 
 @DocuShare{SITCOMTN-003,
