comments from Doug

--- a/local.bib
+++ b/local.bib
@@ -38,6 +38,13 @@
   handle =       {LTS-88},
 }
 
+@DocuShare{LTS-54,
+  author =       {J. Sebag},
+  title =        "{LSST Summit Environmental Conditions Requirements}",
+  year =         2009,
+  handle =       {LTS-54},
+}
+
 @DocuShare{LTS-146,
   author =       {W. Gressler, D. Neill, J. Sebag},
   title =        "{M2 Cell Assembly Specifications Document}",
